--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Get a users latest GitHub commit",
   "main": "index.js",
   "scripts": {
-    "test": "ava"
+    "test": "ava",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,10 @@
   },
   "devDependencies": {
     "ava": "^2.1.0",
+    "eslint": "^6.0.1",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-ava": "^7.1.0",
+    "eslint-plugin-import": "^2.18.0",
     "nock": "^10.0.6"
   }
 }
