--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "latest",
     "commit"
   ],
-  "author": "",
+  "author": "Knut Kirkhorn",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Knutakir/gh-latest-commit/issues"
